version 2.1, fixed anvil